#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-37
2018-02-27 Mikhail S. Dubrovin
- begin adding support for epix10ka PyDataAccess, UtilsEpix and examples/ex_epix10ka *
- fix epix geometry access issue - PyDetectorAccess - for geometry constants check repo directory only

Tag: V01-00-36
2018-02-01 Mikhail S. Dubrovin
- pnccd common mode - evaluate cm correction for masked pixels, apply for all in group
	modified:   examples/ex_pnccd_plot_in_evloop.py
	modified:   src/UtilsCommonMode.py

Tag: V01-00-35
2018-01-31 Mikhail S. Dubrovin
- refactor Utils, add new pnccd cm correction in det interface
	modified:   examples/ex_pnccd_plot_in_evloop.py
	modified:   src/AreaDetector.py
	modified:   src/PyDetectorAccess.py
	new file:   src/UtilsCommonMode.py
	modified:   src/UtilsJungfrau.py
	modified:   src/UtilsPNCCD.py

2018-01-30 Mikhail S. Dubrovin
- comment print in UtilsJungfrau.py

Tag: V01-00-34
2018-01-30 Mikhail S. Dubrovin
- fix numpy indexing in UtilsJungfrau.py, add UtilsPNCCD.py, update ex_pnccd_plot_in_evloop.py

Tag: V01-00-33
???

Tag: V01-00-32
2017-12-11 Daniel Damiani
- DetectorTypes.py - add new BLD for MEC analog input to bld_info

Tag: V01-00-31
2017-12-11 Mikhail S. Dubrovin
- PyDetector.DetInfo - fix bug in regular expression pattern and re-definition global var dt

2017-12-07 Mikhail S. Dubrovin
- modified: examples/ex_epix10ka.py

Tag: V01-00-30
2017-12-06 Mikhail S. Dubrovin
- add support for epix10ka
	new file:   ex_epix10ka.py
	new file:   ex_epix10ka_ipython.py
	modified:   ../src/DetectorTypes.py
	modified:   ../src/PyDataAccess.py
	modified:   ../src/PyDetectorAccess.py

2017-12-04 Mikhail S. Dubrovin
- add tname='5' in ex_jungfrau_images.py

Tag: V01-00-29