@@ -7,6 +7,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-38
+2018-03-19 Mikhail S. Dubrovin
+- AreaDetector - evaluate image for (2-d) JUNGFRAU because of gaps in segment geometry.
+
 Tag: V01-00-37
 2018-02-27 Mikhail S. Dubrovin
 - begin adding support for epix10ka PyDataAccess, UtilsEpix and examples/ex_epix10ka *
